<resources>
    <string name="app_name">绿点加速</string>
    <string name="app_site">www.greenuuu.com</string>
    <string name="app_qq_group_key"></string>

    <string name="header_title">绿点加速器</string>
    <string name="header_desc">要想生活过的去，上网必须带点绿</string>

    <string name="action_recharge">续费</string>
    <string name="action_feedback">反馈</string>
    <string name="action_update">更新</string>
    <string name="action_about">关于</string>
    <string name="action_qqgroup">加群</string>
    <string name="action_logout">注销</string>
    <string name="action_exit">退出</string>

    <string name="connected_text">已连接</string>
    <string name="disconnected_text">已断开</string>

</resources>
